--- a/richards/src/components/Navbar/Navbar.css
+++ b/richards/src/components/Navbar/Navbar.css
@@ -1,8 +1,12 @@
 nav {
   background-color: white;
   height: 3rem;
-  width: 100%;
   z-index: 5;
+}
+
+#navbarrow {
+  width: 100%;
+  height: 100%;
 }
 
 
@@ -35,6 +39,7 @@ nav {
 } */
 
 #q {
+  width: 5rem;
   top: .5rem;
   right: -1.5rem;
 }
